// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Overview /> it should display the correct information 1`] = `
<ul>
  <li>
    Handmade item
  </li>
  <li>
    Material: 
    Some kind of material
  </li>
  <li>
    Made to order
  </li>
  <li>
    Feedback: 
    <a
      href="#reviews"
    >
      900
       reviews
    </a>
  </li>
  <li>
    Favorited by: 
    <a
      href=""
    >
      300
       people
    </a>
  </li>
  <li>
    Gift message available
  </li>
</ul>
`;

exports[`<Price /> it should display the correct priceTag 1`] = `
<div
  id="price"
>
  <div>
    <button
      id="ask"
      onClick={[Function]}
    >
      Ask a question
    </button>
  </div>
  <span
    id="discountPrice"
  >
    $
    + 
  </span>
</div>
`;

exports[`<Selection /> it should display the correct options for all properties 1`] = `
<div
  id="selections"
>
  <div
    id="selection"
  >
    <label>
      color
    </label>
    <span>
      <div>
        <select
          id="optionSelect"
          onChange={[Function]}
          value="none"
        >
          <option
            value="none"
          >
            Select an option
          </option>
          <option
            value="Flesh"
          >
            Flesh
          </option>
          <option
            value="Blue"
          >
            Blue
          </option>
          <option
            value="Beige"
          >
            Beige
          </option>
          <option
            value="Black"
          >
            Black
          </option>
          <option
            value="Champagne"
          >
            Champagne
          </option>
          <option
            value="White"
          >
            White
          </option>
          <option
            value="Gray"
          >
            Gray
          </option>
          <option
            value="Red"
          >
            Red
          </option>
        </select>
      </div>
    </span>
    <div
      id="errorSelection"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Please select a 
      color
    </div>
  </div>
  <div
    id="selection"
  >
    <label>
      size
    </label>
    <span>
      <div>
        <select
          id="optionSelect"
          onChange={[Function]}
          value="none"
        >
          <option
            value="none"
          >
            Select an option
          </option>
          <option
            value="5.5"
          >
            5.5
          </option>
          <option
            value="6"
          >
            6
          </option>
          <option
            value="6.5"
          >
            6.5
          </option>
          <option
            value="7"
          >
            7
          </option>
          <option
            value="7.5"
          >
            7.5
          </option>
          <option
            value="8"
          >
            8
          </option>
          <option
            value="8.5"
          >
            8.5
          </option>
          <option
            value="9"
          >
            9
          </option>
          <option
            value="9.5"
          >
            9.5
          </option>
          <option
            value="10"
          >
            10
          </option>
          <option
            value="10.5"
          >
            10.5
          </option>
        </select>
      </div>
    </span>
    <div
      id="errorSelection"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Please select a 
      size
    </div>
  </div>
  <div
    id="selection"
  >
    <label>
      quantity
    </label>
    <span>
      <div>
        <select
          id="optionSelect"
          onChange={[Function]}
          value="none"
        >
          
          <option
            value={1}
          >
            1
          </option>
          <option
            value={2}
          >
            2
          </option>
          <option
            value={3}
          >
            3
          </option>
          <option
            value={4}
          >
            4
          </option>
          <option
            value={5}
          >
            5
          </option>
          <option
            value={6}
          >
            6
          </option>
          <option
            value={7}
          >
            7
          </option>
          <option
            value={8}
          >
            8
          </option>
          <option
            value={9}
          >
            9
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={11}
          >
            11
          </option>
          <option
            value={12}
          >
            12
          </option>
          <option
            value={13}
          >
            13
          </option>
          <option
            value={14}
          >
            14
          </option>
          <option
            value={15}
          >
            15
          </option>
        </select>
      </div>
    </span>
    <div
      id="errorSelection"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Please select a 
      quantity
    </div>
  </div>
</div>
`;

exports[`<SelectionEntry /> it should display the correct options of colors 1`] = `
<div
  id="selection"
>
  <label>
    color
  </label>
  <span>
    <div>
      <select
        id="optionSelect"
        onChange={[Function]}
        value="none"
      >
        <option
          value="none"
        >
          Select an option
        </option>
        <option
          value="red"
        >
          red
        </option>
        <option
          value="black"
        >
          black
        </option>
        <option
          value="white"
        >
          white
        </option>
      </select>
    </div>
  </span>
  <div
    id="errorSelection"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Please select a 
    color
  </div>
</div>
`;
